<resources>
    <string name="app_name">My Application</string>
    <string name="hello">Hello!</string>
    <string name="fill_det">Fill In Your Details Or Continue Via Social Media</string>
    <string name="password">Password</string>
    <string name="passhint">********</string>
    <string name="restore">Restore</string>
    <string name="login">Log in</string>
    <string name="are_u_new">Are you new to it?</string>
    <string name="create">Create a user</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">123@gmail.com</string>
    <string name="login_failed">Login failed</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="emailtext">Email</string>
    <string name="shop">Sneaker Shop</string>
    <string name="incart">In cart</string>
    <string name="details">Details</string>
    <string name="categories">Categories</string>
    <string name="popular">Popular</string>
    <string name="sales">Sales</string>
    <string name="viewall">All</string>
    <string name="main">Main</string>
    <string name="tennis">Tennis</string>
    <string name="outdoor">Outdoor</string>
    <string name="order">Order</string>
    <string name="cart">Cart</string>
    <string name="good">goods</string>
    <string name="favorite">Favorite</string>
    <string name="register">Register</string>
    <string name="name">Your name</string>
    <string name="allow">I allow to process personal data</string>
    <string name="reg">Register</string>
    <string name="haveacc">Have account?</string>
    <string name="namehint">x x x x x x x x</string>
    <string name="forgot">Forgot Password</string>
    <string name="enteraccdata">Enter Your Account For Reset</string>
    <string name="send">Send</string>
    <string name="checkemail">Check Your Email. Wed Sent Code For Password Recovery On Your Email</string>
    <string name="checking">OTR Check</string>
    <string name="please">Please, Check Your Email, to see Verification Code</string>
    <string name="code">OTR Code</string>
    <string name="username">Emmanuel Qwerty</string>
    <string name="orders">Orders</string>
    <string name="note">Notifications</string>
    <string name="settings">Settings</string>
    <string name="exit">Exit</string>
    <string name="profile">Profile</string>
    <string name="yourname">Name</string>
    <string name="lastname">Last name</string>
    <string name="address">Address</string>
    <string name="latest">Latest</string>
    <string name="yesterday">Yesterday</string>
    <string name="lastn">Qwerty</string>
    <string name="nam">Emmanuel</string>
    <string name="adres">Nigeria</string>
    <string name="phone">Phone</string>
    <string name="payway">Pay way</string>
    <string name="adresnumbernum">Nigeria</string>
    <string name="adresmap">1082 Airport, Nigeria</string>
    <string name="card">Dbl Card</string>
    <string name="cardnumber">**** **** 0696 4629</string>
    <string name="contactinfo">Contact info</string>
    <string name="phonenumber">+234-811-732-5298</string>
</resources>